# netham-poc

./: .gitignore  .markdownlint.yaml  AGENTS.md  README.md  cspell.config.yaml  poc-spec.md  pyproject.toml  specification.md
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: build_lint_test.yml  devcontainer_build_test.yml
src/netham/: __init__.py  cli.py  config.py  credentials.py  device_auth.py
tests/: test_cli.py  test_config.py  test_credentials.py  test_device_auth.py
