# SPDX-FileCopyrightText: © 2026 James C. Womack
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netham"
version = "0.1.0"
description = "Acquire temporary AWS credentials via OpenID Connect Device Authorization Grant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "boto3",
    "requests",
]

[project.scripts]
netham = "netham.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netham"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
