# SPDX-FileCopyrightText: © 2026 James C. Womack
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netham"
version = "0.1.0"
description = "Acquire temporary AWS credentials via OpenID Connect Device Authorization Grant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "boto3",
    "requests",
]

[project.scripts]
netham = "netham.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netham"]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# ruff defaults with isort rules added
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

